--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "moment": "^2.12.0",
     "react-native": "^0.20.0",
     "react-native-button": "^1.4.2",
-    "react-native-gifted-form": "0.0.6"
+    "react-native-gifted-form": "0.0.6",
+    "react-native-icons": "^0.7.1"
   },
   "devDependencies": {
     "babel-eslint": "^5.0.0",
