--- a/ios/iheartIter2.xcodeproj/xcshareddata/xcschemes/iheartIter2.xcscheme
+++ b/ios/iheartIter2.xcodeproj/xcshareddata/xcschemes/iheartIter2.xcscheme
@@ -17,7 +17,7 @@
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
                BuildableName = "iheartIter2.app"
                BlueprintName = "iheartIter2"
-               ReferencedContainer = "container:DEI Guides.xcodeproj">
+               ReferencedContainer = "container:iheartIter2.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
@@ -31,7 +31,7 @@
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
                BuildableName = "iheartIter2Tests.xctest"
                BlueprintName = "iheartIter2Tests"
-               ReferencedContainer = "container:DEI Guides.xcodeproj">
+               ReferencedContainer = "container:iheartIter2.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -49,7 +49,7 @@
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
                BuildableName = "iheartIter2Tests.xctest"
                BlueprintName = "iheartIter2Tests"
-               ReferencedContainer = "container:DEI Guides.xcodeproj">
+               ReferencedContainer = "container:iheartIter2.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -59,7 +59,7 @@
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
             BuildableName = "iheartIter2.app"
             BlueprintName = "iheartIter2"
-            ReferencedContainer = "container:DEI Guides.xcodeproj">
+            ReferencedContainer = "container:iheartIter2.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -82,7 +82,7 @@
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
             BuildableName = "iheartIter2.app"
             BlueprintName = "iheartIter2"
-            ReferencedContainer = "container:DEI Guides.xcodeproj">
+            ReferencedContainer = "container:iheartIter2.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
@@ -101,7 +101,7 @@
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
             BuildableName = "iheartIter2.app"
             BlueprintName = "iheartIter2"
-            ReferencedContainer = "container:DEI Guides.xcodeproj">
+            ReferencedContainer = "container:iheartIter2.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
